--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -14,3 +14,15 @@
  بمتجر القهوة المفضل لديك وقم باللازم Caribouاستبدل محمد باسمك و
     
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p> <h1>مرجبا انا علي</h1></p>
+    <p> <h2> قهوني المفضلة احصل عليها من tobys</h2></p>
+</body>
+</html>
